# holy-hell

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
assets/: selector.aseprite
include/: board.hpp  engine.hpp  piece.hpp
src/: board.cpp  engine.cpp
